# FARM-GLOBE

./: README.md
backend/: Dockerfile
backend/app/: pyproject.toml
